bluegreen/combined-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /preview
        pathType: Prefix
        backend:
          service:
            name: bluegreen-demo-preview
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bluegreen-demo
            port:
              number: 80
